--- a/web/css/main.css
+++ b/web/css/main.css
@@ -13,13 +13,15 @@ main {
     position: relative;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 30px calc(100vh - 30px);
+    grid-template-rows: 40px calc(100vh - 40px);
     width: 100vw;
     height: 100vh;
 }
 
 div.info_bar {
-    width: 300%;
+    grid-column: 1 / span 3;
+    box-sizing: border-box;
+    padding: 1%;
 }
 
 div.panels:nth-child(2) {
@@ -37,4 +39,17 @@ div.panels:nth-child(4) {
 
 div.panels {
     grid-row: 2;
+}
+
+select#stats {
+    height: 100%;
+    width: 220px;
+    border: none;
+    border-radius: 1rem;
+    padding: .5rem;
+    outline: none;
+    box-shadow: 0px 0px .5rem .1rem black inset;
+    width: 30%;
+    min-width: 150px;
+    align-content: center;
 }
