--- a/web/css/main.css
+++ b/web/css/main.css
@@ -7,9 +7,9 @@ main {
     box-sizing: border-box;
     background-image: linear-gradient(to right, #db0, #af6496, #079);
     background-size: cover;
-	-webkit-background-clip: text;
-	background-clip: text;
-	color: transparent;
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
     position: relative;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -21,24 +21,20 @@ main {
 div.info_bar {
     grid-column: 1 / span 3;
     box-sizing: border-box;
-    padding: 1%;
-}
-
-div.panels:nth-child(2) {
-    background-color: #079;
-    grid-row: 2;
-}
-
-div.panels:nth-child(3) {
-    background-color: #af6496;
-}
-
-div.panels:nth-child(4) {
-    background-color: #db0;
+    padding: .5%;
 }
 
 div.panels {
-    grid-row: 2;
+    display: flex;
+    justify-content: center;
+    padding: 2%;
+    box-sizing: border-box;
+    background-color: transparent;
+    transition: all 1s ease-in;
+}
+
+div.panels:hover {
+    background-color: #fff2;
 }
 
 select#stats {
@@ -49,7 +45,20 @@ select#stats {
     padding: .5rem;
     outline: none;
     box-shadow: 0px 0px .5rem .1rem black inset;
-    width: 30%;
-    min-width: 150px;
     align-content: center;
+}
+
+div.inventory_items {
+    display: grid;
+    width: 100%;
+    aspect-ratio: 1;
+    grid-template-rows: repeat(8, 1fr);
+    grid-template-columns: repeat(8, 1fr);
+    gap: 1%;
+    border: 2px solid white;
+}
+
+div.inventory_slot {
+    border: 1px solid white;
+    border-radius: 3px;
 }
