--- a/web/css/main.css
+++ b/web/css/main.css
@@ -28,6 +28,7 @@ div.info_bar {
     padding: .5%;
     align-self: center;
     font-size: large;
+    font-weight: 800;
 }
 
 div.panels {
@@ -48,11 +49,12 @@ select#stats {
     height: 100%;
     width: 220px;
     border: none;
-    border-radius: 1rem;
+    border-radius: 20px;
     padding: .5rem;
     outline: none;
     box-shadow: 0px 0px .5rem .1rem black inset;
     align-content: center;
+    font-weight: 900;
 }
 
 div.inventory {
@@ -73,10 +75,15 @@ div#inventory_items {
 }
 
 div.inventory_slot {
-    border: 1px solid white;
-    border-radius: 6px;
+    border: .15rem solid white;
+    border-radius: .5rem;
 }
 
 div#page_nav {
-    font-size: large;
+    font-size: xx-large;
+    font-weight: 800;
+}
+
+span.page_nav_button {
+    margin: 0px 1rem;
 }
