--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1,5 +1,5 @@
 * {
-    font-family: Nunito, Quicksand, Montserrat, 'Segoe UI', system-ui;
+/*     font-family:  */
 }
 
 img.pixel-art {
@@ -15,6 +15,7 @@ img.pixel-art {
 body {
     background-color: #333;
     margin: 0px;
+    --font-primary: Nunito, Quicksand, Montserrat, 'Segoe UI', system-ui;
 }
 
 main {
@@ -30,6 +31,7 @@ main {
     grid-template-rows: 10vh 90vh;
     width: 100vw;
     height: 100vh;
+    font-family: var(--font-primary);
 }
 
 div.info_bar {
@@ -41,6 +43,7 @@ div.info_bar {
     font-weight: 800;
     display: flex;
     justify-content: space-between;
+    box-shadow: 0px 0px 1rem 0rem white;
 }
 
 div.info_bar > :nth-child(2) {
@@ -162,7 +165,7 @@ span.page_nav_button:hover {
 .stat_slider {
     width: 100%;
     height: 1vh;
-    border-radius: .5vh;
+    border-radius: 1vh;
     background-color: white;
 }
 
@@ -177,4 +180,8 @@ span.page_nav_button:hover {
 
 .current_mana {
     background-color: var(--current-mana);
+}
+
+div.main_screen {
+    font: 600 2rem var(--font-primary);
 }
