--- a/web/css/main.css
+++ b/web/css/main.css
@@ -65,15 +65,16 @@ div.panels {
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    user-select: none;
     width: calc(100vw / 3);
     padding: 3%;
     box-sizing: border-box;
     background-color: transparent;
-    transition: all .5s ease-in;
+    transition: all 1s ease-in;
 }
 
 div.panels:hover {
-    background-color: #ffffff08;
+    background-color: #ffffff04;
 }
 
 select#stats {
@@ -120,6 +121,10 @@ div.inventory_slot {
     position: relative;
 }
 
+div.inventory_slot > img {
+    width: 100%;
+}
+
 .inventory_item_count {
     position: absolute;
     bottom: 0px;
@@ -128,7 +133,6 @@ div.inventory_slot {
     margin: 0px;
     font-size: .9em;
     color: cyan;
-    user-select: none;
 }
 
 div#page_nav {
@@ -184,4 +188,14 @@ span.page_nav_button:hover {
 
 div.main_screen {
     font: 600 2rem var(--font-primary);
+    color: #ddd;
+    text-shadow: 0px 0px .7rem white;
+    .jesse-text {
+        color: #fdd;
+        text-shadow: 0px 0px .7rem #f77;
+    }
+    .azira-text {
+        color: #aff;
+        text-shadow: 0px 0px .7rem #7ff;
+    }
 }
